@@ -1,3 +1,8 @@
+2019-10-11  Steven G. Kargl  <kargl@gcc.gnu.org>
+
+	PR fortran/92019
+	* gfortran.dg/pr92019.f90: New test.
+
 2019-10-11  Joseph Myers  <joseph@codesourcery.com>
 
 	* gcc.dg/dfp/c11-keywords-1.c, gcc.dg/dfp/c11-keywords-2.c,
