@@ -1,3 +1,8 @@
+2019-10-11  Steven G. Kargl  <kargl@gcc.gnu.org>
+
+	PR fortran/92019
+	* array.c (match_subscript): BOZ cannot be an array subscript.
+
 2019-10-11  Tobias Burnus  <tobias@codesourcery.com>
 
 	PR fortran/92050
